added weapon routers, need to finish update routes
